dark mode button fixed

--- a/style.css
+++ b/style.css
@@ -207,12 +207,12 @@ a{
 }
 
 @media only screen and (max-width: 600px){
-    .navbar{
+    /* .navbar{
         background-color: rgb(0, 0, 0);
-    }
+    } */
 
     p{
-        color: white;
+        /* color: white; */
         font-size: 35px;
     }
 
@@ -238,27 +238,24 @@ a{
     .button-dark{
         color: white;
         background-color: rgb(60, 54, 54);
-        width: 100px;
-        height: 35px;
-        border-radius: 8px;
-        margin-top: 20px;
-        border-width: 0px;
-        font-size: 15px;
-    }
 
     .taskarea{
-        background-color: rgb(42, 42, 46);
-        color: white;
+        background-color: rgb(252, 252, 225);
+        color: black;
+    }
+
+    .taskarea-dark{
+        background-color: rgb(61, 61, 55);
     }
 
     .taskitem{
         font-family: 'Poppins', sans-serif;
-        font-size: 26px;
-        color: white;
+        font-size: 17px;
+        color: black;
     }
 
-    .footer{
+    /* .footer{
         background-color: rgb(0, 0, 0);
         color: white;
-    }
+    } */
 }
